RESOLVED FIXED94760
[V8] OwnHandle doesn't need to support weak handles
https://bugs.webkit.org/show_bug.cgi?id=94760
Summary [V8] OwnHandle doesn't need to support weak handles
Adam Barth
Reported 2012-08-22 17:24:08 PDT
[V8] OwnHandle doesn't need to support weak handles
Attachments
Patch (3.20 KB, patch)
2012-08-22 17:24 PDT, Adam Barth
haraken: review+
Adam Barth
Comment 1 2012-08-22 17:24:41 PDT
Kentaro Hara
Comment 2 2012-08-22 17:26:30 PDT
Comment on attachment 160044 [details] Patch Looks reasonable.
Adam Barth
Comment 3 2012-08-22 18:22:40 PDT
Note You need to log in before you can comment on or make changes to this bug.