[V8] OwnHandle doesn't need to support weak handles https://bugs.webkit.org/show_bug.cgi?id=94760

Reviewed by Kentaro Hara.

No code uses makeWeak(). We can drop support for it and simplify this
class.

* bindings/v8/OwnHandle.h:
(WebCore):
(OwnHandle):
(WebCore::OwnHandle::OwnHandle):
(WebCore::OwnHandle::~OwnHandle):
(WebCore::OwnHandle::get):
(WebCore::OwnHandle::set):
(WebCore::OwnHandle::clear):


git-svn-id: svn://svn.chromium.org/blink/trunk@126376 bbb929c8-8fbe-4397-9dbb-9b2b20218538