third_party/WebKit/Source/WebCore/bindings/v8/OwnHandle.h
@@ -36,45 +36,41 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-    template<typename T>
-    class OwnHandle {
-    public:
-        OwnHandle() { }
-        explicit OwnHandle(v8::Handle<T> handle) : m_handle(v8::Persistent<T>::New(handle)) { }
-        ~OwnHandle() { clear(); }
+template<typename T>
+class OwnHandle {
+public:
+    OwnHandle() { }
 
-        v8::Handle<T> get() const { return m_handle; }
-        void set(v8::Handle<T> handle) { clear(); m_handle = v8::Persistent<T>::New(handle); }
+    explicit OwnHandle(v8::Handle<T> handle)
+        : m_handle(v8::Persistent<T>::New(handle))
+    {
+    }
 
-        // Note: This is clear in the OwnPtr sense, not the v8::Handle sense.
-        void clear()
-        {
-            if (m_handle.IsEmpty())
-                return;
-            if (m_handle.IsWeak())
-                m_handle.ClearWeak();
-            m_handle.Dispose();
-            m_handle.Clear();
-        }
+    ~OwnHandle()
+    {
+        clear();
+    }
 
-        // Make the underlying handle weak.  The client doesn't get a callback,
-        // we just make the handle empty.
-        void makeWeak()
-        {
-            if (m_handle.IsEmpty())
-                return;
-            m_handle.MakeWeak(this, &OwnHandle<T>::weakCallback);
-        }
+    v8::Handle<T> get() const { return m_handle; }
 
-    private:
-        static void weakCallback(v8::Persistent<v8::Value> object, void* ownHandle)
-        {
-            OwnHandle<T>* handle = static_cast<OwnHandle<T>*>(ownHandle);
-            handle->clear();
-        }
+    void set(v8::Handle<T> handle)
+    {
+        clear();
+        m_handle = v8::Persistent<T>::New(handle);
+    }
 
-        v8::Persistent<T> m_handle;
-    };
+    // Note: This is clear in the OwnPtr sense, not the v8::Handle sense.
+    void clear()
+    {
+        if (m_handle.IsEmpty())
+            return;
+        m_handle.Dispose();
+        m_handle.Clear();
+    }
+
+private:
+    v8::Persistent<T> m_handle;
+};
 
 } // namespace WebCore
 
